package uk.ac.kent.models.people;

/**
 * @author Norbert
 */

@SuppressWarnings("AlibabaClassNamingShouldBeCamel")
public final class HREmployee extends Employee {}
