package uk.ac.kent.models.people;

@SuppressWarnings("MarkerInterface")
interface Reviewer {}
