@startuml

class AnnualReview {
    int staffNo
    Date date
    boolean signed
    String name
    Section section
    String jobTitle
    Reviewer reviewer
    Recommendation recommendation
}


enum Recommendation {
    STAY_IN_POST
    SALARY_INCREASE
    PROMOTION
    PROBATION
}

class Employee implements Reviewee, User {
    int staffNo
    String name
    LocalDate dateOfBirth
    String city
    String county
    String postCode
    String phone
    String emergencyContact
    String emergencyContactNumber
    void createAnnualReview()
}

class HREmployee extends Employee, HumanResources

class Manager extends Reviewer, Employee

class Director extends Reviewer, Employee

interface Reviewer {
    void makeReview(Reviewee employee)
}

interface Reviewee {
    void createAnnualReviewRecord()
}

interface HumanResources {
    void assignReviewer(Reviewer reviewer, Reviewee reviewee)
}

enum Section {
    INFORMATION_TECHNOLOGY,
    ADMINISTRATION,
    SALES_AND_MARKETING,
    SERVICES_DELIVERY,
    BUSINESS_INTELLIGENCE,
    MANAGEMENT,
    CONSULTANCY,
    HUMAN_RESOURCES
}

class AuthenticationServer
class Authorization

abstract class User {
    String username
    String password
    void logIn()
    void logOut()
}

AnnualReview -- Employee
Recommendation -- AnnualReview
Section -- AnnualReview

@enduml
